--- a/Lab 03/Contact.html
+++ b/Lab 03/Contact.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset = "utf-8">
+    <title> Contact </title>
+    </head>
+    <body>
+    <h1>Gabriel Worley</h1>
+    <p>900 Crouse Avenue</p>
+    <a href="mailto:glworley@syr.edu">Gabriel Worley Email</a> 
+    <h2> My LinkedIn Profile </h2>
+    <h3> external link</h3>
+    <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+   
 
+</body>    
