--- a/Lab04/skills.html
+++ b/Lab04/skills.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset=utf-8>
+        <title>Front End Web Development</title>
+   <style>
+    table, th, td {border: 1px solid black;}
+
+   </style>
+    </head>
+    <h1> Table</h1>
+    <h2> Skills table</h2>
+    <caption>some of my personal skills</caption>
+    <tr>
+        <th>awesome skills</th>
+        <th>really cool skills</th>
+        <th>wicked skills</th>
+
+    </tr>
+    <tr>
+        <td>I know how to skateboard</td>
+        <td> I know how to ride a bike</td>
+        <td>I know how to drive stick shift</td>
+        <td>I can cook fairly well</td>
+    </tr>
+    <tr>
+        <td>I am a novice in html</td>
+        <td>I can bench 225</td>
+        <td>I can do a front flip standing</td>
+        <td>I can type 110 WPM</td>
+    
+    </tr>
+    <tr>
+        <td>I can handstand</td>
+        <td>I can get sunburnt while only being in the sun for 30 minutes</td>
+        <td>I can get anxious about anything for no reason</td>
+        <td>I can run a mile in seven minutes</td>
+    </tr>
+</html>
 
