--- a/Lab04/skills.html
+++ b/Lab04/skills.html
@@ -19,13 +19,13 @@
 <body>
 
 <table>
-  <thead>
+  <head>
     <tr>
       <th>Column 1</th>
       <th>Column 2</th>
       <th>Column 3</th>
     </tr>
-  </thead>
+  </head>
   <body>
     <tr>
       <td>Data 1</td>
@@ -47,4 +47,3 @@
 
 </body>
 </html>
-
