--- a/Lab04/skills.html
+++ b/Lab04/skills.html
@@ -21,26 +21,27 @@
 <table>
   <head>
     <tr>
-      <th>Column 1</th>
-      <th>Column 2</th>
-      <th>Column 3</th>
+      <th>Cool skills</th>
+      <th>Awesome skills</th>
+      <th>really awesome skills</th>
     </tr>
   </head>
   <body>
     <tr>
-      <td>Data 1</td>
-      <td>Data 2</td>
-      <td>Data 3</td>
+      <td>I can play drums</td>
+      <td>I can skateboard</td>
+      <td>I can bench 225</td>
     </tr>
     <tr>
-      <td>Data 4</td>
-      <td>Data 5</td>
-      <td>Data 6</td>
+      <td>I can cook</td>
+      <td>I can drive stick</td>
+      <td>I can swim</td>
     </tr>
     <tr>
-      <td>Data 7</td>
-      <td>Data 8</td>
-      <td>Data 9</td>
+      <td>I can ride a bike</td>
+      <td>I am good at fishing</td>
+      <td>I do not drink alcohol</td>
+        <td>I can handstand</td>
     </tr>
   </body>
 </table>
