--- a/Lab04/skills.html
+++ b/Lab04/skills.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>3-Column Table</title>
+<title>Intro to front end development</title>
 <style>
     table {
         width: 100%;
