--- a/Lab05/contact.html
+++ b/Lab05/contact.html
@@ -11,8 +11,8 @@
     <h2> My LinkedIn Profile </h2>
     <h3> external link</h3>
     <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-    <a href="../images/Logo-sized.png">LinkedIn photo</a>
-    <img src="../images/Logo-sized.png" alt="my photo">
+    <a href="images/Logo-sized.png">LinkedIn photo</a>
+    <img src="images/Logo-sized.png" alt="my photo">
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0555648023806!2d-76.1395272249878!3d43.0402623918596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39f4537cd79%3A0x968a90aa98400698!2s900%20S%20Crouse%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1707019069643!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    <meta content="viewport" content="width=device-width, initial-scale=1.0">
    <title>Contact form</title>
