--- a/Lab06/skills.html
+++ b/Lab06/skills.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Intro to front end development</title>
-<link rel="stylesheet" href="Lab06\styles.css">
+<link rel="stylesheet" href="..\styles.css">
 <style>
     table {
         width: 100%;
