--- a/Lab06/contact.html
+++ b/Lab06/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset = "utf-8">
-    <title> Contact </title>
-    <link rel="stylesheet" href="styles.css">
+      <title> Contact </title>
+      <link rel="stylesheet" href="..\styles.css">
   </head>
     
     <h1>Gabriel Worley</h1>
