--- a/Lab06/skills.html
+++ b/Lab06/skills.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="..\styles.css">
 </head>
 <body>
-  <h1 class="special">lorem ipsum</h1>
+  <h1>lorem ipsum</h1>
 
 <table>
     <caption>Skills that I have</caption>
