--- a/Lab07/index.html
+++ b/Lab07/index.html
@@ -13,9 +13,11 @@
         <img src="..\images\Capture.PNG" alt="me">  
 
         <body>  
+            <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
+                 </nav>
        <h1> Gabriel Worley's Biography</h1>
            
-     <p> I am a data science major, <strong> Commodore 64</strong>  and I am interested in cyber security. I graduated dean’s list from my last college, and I am also in the Army. Outside of school, I do not do much. I like to go to the gym regularly and read books. 
+     <p>  <strong> I am a data science major</strong>  ,and I am interested in cyber security. I graduated dean’s list from my last college, and I am also in the Army. Outside of school, I do not do much. I like to go to the gym regularly and read books. 
       </p>
  <p>
       I love IST 263 
