--- a/Lab07/contact.html
+++ b/Lab07/contact.html
@@ -22,7 +22,8 @@
    <title>Contact form</title>
     
  <body>  
-   
+  <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
+  </nav>
    <h2>Contact form</h2>
    
    <form>
