--- a/Lab07/skills.html
+++ b/Lab07/skills.html
@@ -22,6 +22,8 @@
 
     
 <body>
+  <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
+  </nav>
 <h1>lorem ipsum</h1>
 <table>
     <caption>Skills that I have</caption>
