--- a/Lab07/index.html
+++ b/Lab07/index.html
@@ -9,8 +9,8 @@
             <link rel="stylesheet" href="styles.css">
         </head>
        
-        <a href="..\images\Capture.PNG">My photo</a>
-        <img src="..\images\Capture.PNG" alt="me">  
+        <a href="Capture.PNG">My photo</a>
+        <img src="Capture.PNG"> alt="me">  
 
         <body>  
             <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
@@ -28,8 +28,8 @@
   <p>
     <ol> things that i do not like
 <li>I do not like the tipping system in the United States</li>
-<li>I do not like how often people have to work</li>
-<li>I do not like how humanity treats each other right now</li>
+<li>Mondays</li>
+<li>Oranges</li>
     </ol>
   
 </p>
