--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -11,8 +11,10 @@
     
    
  <body>  
+
   <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
   </nav>
+<a href="Capture.PNG">Bio Photo</a>
   <h1>Gabriel Worley</h1>
   <p>900 Crouse Avenue</p>
   <a href="mailto:glworley@syr.edu">Gabriel Worley Email</a> 
