--- a/Lab04/skills.html
+++ b/Lab04/skills.html
@@ -41,7 +41,7 @@
     <tr>
       <td>I can ride a bike</td>
       <td>I am good at fishing</td>
-      <td>I do not drink alcohol</td>
+      <td>I scored well on the asvab</td>
         <td>I can handstand</td>
     </tr>
   
