--- a/Lab05/images/Lab08/skills.html
+++ b/Lab05/images/Lab08/skills.html
@@ -50,7 +50,7 @@
       <tr class="even row">
       <td>I can ride a bike</td>
       <td>I am good at fishing</td>
-      <td>I do not drink alcohol</td>
+      <td>I can operate a forklift</td>
         <td>I can handstand</td>
     </tr>
   
