--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
             <title>Gabriel Worley - Bio</title>
             <link rel="stylesheet" href="styles.css">
             <style>
-               .separator {
-      margin-right: 900px;
-    }
-    img {
-    float: left; /* Float the image to the left */
-    margin-right: 20px; /* Add some space between the image and text */
-  }
+                footer{float: right;}
             </style>
         </head>
        
@@ -34,7 +28,7 @@
       I love IST 263 
    </p>
   <p>
-   My first job was being a dishwasher
+   My first job was being a pizza delivery driver
      </p>
      <p>
     <ol> things that i do not like
@@ -47,21 +41,15 @@
 
 <h2> Personal Information </h2>
 <p>
-I am 21 years old, and I am from Miami, Florida
+I am 21 years old, and I am from Clearwater, Florida
 </p>
         </main>
 <footer>
-        
-<hr>
+        <hr>
+&trade; 2020 
+"if youre not first, youre last" -Ricky Bobby
 
-
-    <span class="separator">&trade; 2020 </span>
-    <span>"if youre not first your last"-Ricky Bobby</span>
-  </footer>
-  
-
-
-
+</footer>
 </body>
 
 </html>
