--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -27,6 +27,8 @@
     width: 100%;
     height: 300px; /* Adjust height as needed */
   }
+  .img1 {float: left; margin-right: 10px;}
+	.clear {clear:both;}
 </style>
 </head>
 <body>
