--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -19,7 +19,7 @@
     background-color: #cf1313; /* White background */
     padding: 20px; /* Add padding for better readability */
     border: 1px solid #07d7e6; /* Add border for visualization */
-    box-sizing: border-box; /* Include padding and border in width */
+    box-sizing: content-box; /* Include padding and border in width */
   }
 
   /* Style for the map iframe */
