--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -5,27 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Form</title>
 <style>
-  /* Style for the flex container */
+ body{color: black;}
+ /* Style for the flex container */
   .flex-container {
     display: flex;
     flex-direction: column; /* Stack items vertically */
-    align-items: stretch; /* Stretch items to full container width */
+    align-items:flex-start; /* Stretch items to full container width */
   }
 
   /* Style for each flex item */
   .flex-item {
-    flex: 0 0 100%; /* Take up full width */
+    flex: 0 0 50%; /* Take up full width */
     margin-bottom: 20px; /* Add space between items */
     background-color: #cf1313; /* White background */
     padding: 20px; /* Add padding for better readability */
-    border: 1px solid #07d7e6; /* Add border for visualization */
+    border: 3px solid #d0e607; /* Add border for visualization */
     box-sizing: content-box; /* Include padding and border in width */
   }
 
   /* Style for the map iframe */
   iframe {
-    width: 100%;
-    height: 300px; /* Adjust height as needed */
+    width: 50%;
+    height: 150px; /* Adjust height as needed */
   }
   .img1 {float: left; margin-right: 10px;}
 	.clear {clear:both;}
