--- a/Lab05/images/Lab08/index.html
+++ b/Lab05/images/Lab08/index.html
@@ -12,8 +12,8 @@
       margin-right: 900px;
     }
     img {
-    float: left; /* Float the image to the left */
-    margin-right: 20px; /* Add some space between the image and text */
+    float: left; 
+    margin-right: 20px; 
   }
             </style>
         </head>
