--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -6,27 +6,27 @@
 <title>Contact Form</title>
 <style>
  body{color: black;}
- /* Style for the flex container */
+ 
   .flex-container {
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items:flex-start; /* Stretch items to full container width */
+    flex-direction: column;
+    align-items:flex-start; 
   }
 
-  /* Style for each flex item */
+  
   .flex-item {
-    flex: 0 0 50%; /* Take up full width */
-    margin-bottom: 20px; /* Add space between items */
-    background-color: #cf1313; /* White background */
-    padding: 20px; /* Add padding for better readability */
-    border: 3px solid #d0e607; /* Add border for visualization */
-    box-sizing: content-box; /* Include padding and border in width */
+    flex: 0 0 50%; 
+    margin-bottom: 20px; 
+    background-color: #cf1313; 
+    padding: 20px; 
+    border: 3px solid #d0e607; 
+    box-sizing: content-box; 
   }
 
-  /* Style for the map iframe */
+  
   iframe {
     width: 50%;
-    height: 150px; /* Adjust height as needed */
+    height: 150px; 
   }
   .img1 {float: left; margin-right: 10px;}
 	.clear {clear:both;}
@@ -36,7 +36,7 @@
   <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
   </nav>
 <div class="flex-container">
-  <!-- First flexbox -->
+  
   <div class="flex-item">
     <h1>Gabriel Worley</h1>
     <p>900 Crouse Avenue</p>
@@ -48,7 +48,7 @@
     <img src="Capture.PNG" alt="My Photo">
   </div>
 
-  <!-- Second flexbox -->
+  
   <div class="flex-item">
     <h2>Contact Form</h2>
     <form>
