--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -11,7 +11,8 @@
     display: flex;
     flex-direction: column;
     align-items:flex-start; 
-  }
+  border-radius: 20px; 
+        overflow: hidden; }
 
   
   .flex-item {
