--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -15,10 +15,12 @@
  
   .flex-container {
     display: flex;
-    flex-direction: column;
-    align-items:baseline; 
-    width: 100px; /* Set the desired width */
-  height: 50px; /* Set the desired height */
+  flex-direction: column; /* Stack flex items vertically */
+  justify-content: center; /* Center items along the main axis */
+  align-items: center; /* Center items along the cross axis */
+  height: 100vh; /* Set container height to 100% of viewport height */
+
+
   border-radius: 20px;}
   
   .flex-item {
