--- a/Lab05/images/Lab08/contact.html
+++ b/Lab05/images/Lab08/contact.html
@@ -6,6 +6,10 @@
 <title>Contact Form</title>
 <style>
  body{background-color: black;}
+ img {
+    float: right; 
+    margin-right: 20px; 
+  }
  
 
 
@@ -21,7 +25,7 @@
   height: 100vh;
 
 
-  border-radius: 50%;}
+  border-radius: 20px;}
   
   .flex-item {
     flex: 0 0 25%; 
