--- a/Lab09/goddamn it.html
+++ b/Lab09/goddamn it.html
@@ -25,7 +25,7 @@
     .flex-container1{  display:flex; justify-content: space-between; align-items:baseline ; padding: 50px; } 
      
     .icon {width: 75px; height: 50%; margin: 20px; line-height: 50px; }
-   caption{text-align: center;}
+   
    body, h1, h2 { font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
    .flex-container2 p {
   margin: 5px;
@@ -40,7 +40,7 @@
       <a href="contact.html">contact</a>
     </nav>
     <h1>Technical skills</h1>
-    <caption>Here is a few of the things that I think are remarkable skills that I have. Certainly there are better things than this to be good at, but these are interesting.</caption>
+    <p>Here is a few of the things that I think are remarkable skills that I have. Certainly there are better things than this to be good at, but these are interesting.</p>
     <div class="flex-container1">
       <div>
         
