come back to me

--- a/Lab 10/updated skills.html
+++ b/Lab 10/updated skills.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intro to front end development</title>
   <style>
-    @media screen and (max-width: 600px) {
-  nav {
-    display: block; 
-    text-align: center; 
-    padding: 10px 0; 
-  }
-  nav a {
-    display: block; 
-    margin: 5px 0; 
-  }
+   nav {
+  background-color: #2c3b8f6c;
+  text-align: center; /* Center-align the links */
 }
+
+nav a {
+  display: block; 
+  padding: 10px; 
+  color: white;
+  text-decoration: none; 
+}
+ 
     nav{background-color: #2c3b8f6c;}
     h1 {text-align:center ; padding: 20px; }
     body {display: flex;  border: 2px solid rgb(0, 255, 21); padding:30px; }
