--- a/Lab 10/index.html
+++ b/Lab 10/index.html
@@ -3,15 +3,21 @@
 <!DOCTYPE html>
     <html lang = "en">
         <head>
-
-            <meta charset = "utf-8">
+<style>
+      .capture{max-width: 100%; }
+      @media screen and (max-width: 600px) {
+  nav a {
+    display: block; 
+    margin-bottom: 10px; 
+</style>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Gabriel Worley - Bio</title>
             <link rel="stylesheet" href="styles.css">
         </head>
        
         <a href="Capture.PNG">My photo</a>
         <img src="Capture.PNG"> alt="me">  
-
+        <img src="Capture.PNG" class="Capture" style="max-width: 500px;" alt="Capture">
         <body>  
             <nav> <a href="index.html">home  </a> | <a href="skills.html"> skills </a> | <a href="contact.html">contact</a> 
                  </nav>
