--- a/Lab 10/updated skills.html
+++ b/Lab 10/updated skills.html
@@ -7,7 +7,7 @@
   <style>
    nav {
   background-color: #2c3b8f6c;
-  text-align: center; /* Center-align the links */
+  text-align: center; 
 }
 
 nav a {
