--- a/folder1/index.html
+++ b/folder1/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <h1>My Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,15 +18,16 @@
         </nav>
     </header>
 
-    <div class="container">
-        <h1>Welcome to our website</h1>
-        <div class="flex-container">
-            <img src="images/pic1.jpg" alt="Picture 1">
-            <img src="images/pic2.jpg" alt="Picture 2">
-            <img src="images/pic3.jpg" alt="Picture 3">
-            <img src="images/pic4.jpg" alt="Picture 4">
-            <img src="images/pic5.jpg" alt="Picture 5">
+    <main>
+        <div class="flexbox">
+            <p>ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</p>
         </div>
-    </div>
+        <div class="flexbox">
+            <p>This is paragraph 2.vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</p>
+        </div>
+        <div class="flexbox">
+            <p>This is paragraph 3.ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
+        </div>
+    </main>
 </body>
 </html>
