--- a/folder1/about.html
+++ b/folder1/about.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <h1>My Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,9 +18,16 @@
         </nav>
     </header>
 
-    <div class="container">
-        <h1>About Us</h1>
-        <p>This is the about page</p>
-    </div>
+    <main>
+        <div class="flexbox">
+            <p>This is paragraph 1.</p>
+        </div>
+        <div class="flexbox">
+            <p>This is paragraph 2.</p>
+        </div>
+        <div class="flexbox">
+            <p>This is paragraph 3.</p>
+        </div>
+    </main>
 </body>
 </html>
