--- a/folder1/about.html
+++ b/folder1/about.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>3rd Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Website</h1>
+        <h1>Types of Sarms</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">1st Page</a></li>
+                <li><a href="about.html">2nd Page</a></li>
+                <li><a href="sloppysteaks.html">3rd Page</a></li>
             </ul>
         </nav>
     </header>
