--- a/folder1/sloppysteaks.html
+++ b/folder1/sloppysteaks.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Types of Sarms</h1>
+        <h1>Title of mock website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">1st Page</a></li>
