--- a/folder1/about.html
+++ b/folder1/about.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3rd Page</title>
     <link rel="stylesheet" href="styles.css">
+<style>
+    .bingus-flexbox{ box-sizing:content-box;
+    position: absolute; 
+    top: 300px; 
+    right: 650px;
+    }
+</style>
 </head>
 <body>
     <header>
-        <h1>Types of Sarms</h1>
+        <h1>About Page</h1>
         <nav>
             <ul>
                 <li><a href="index.html">1st Page</a></li>
@@ -19,14 +26,18 @@
     </header>
 
     <main>
+        <div>
+            <div class="bingus-flexbox">
+                <img src="download (2).jpg" alt="ulterior motive"> 
+            </div>
         <div class="flexbox">
-            <p>This is paragraph 1.</p>
+            <p>Contact: Gabriel Worley-(716)266-9386. 900 Crouse Dr. Syracuse, New York</p>
         </div>
         <div class="flexbox">
-            <p>This is paragraph 2.</p>
+            <p>The use of steroids is a popular but also concerning topic, as it has moral and ethical implications surrounding it. In numerous settings, including sports, bodybuilding, and fitness, steroids are frequently abused and misused for goals like increasing physical attractiveness or athletic performance. Misuse of steroids can result in a number of harmful outcomes, such as hormonal imbalances, liver damage, cardiovascular problems, and psychological issues. Steroid usage also brings up moral questions about honesty and competition in sports. </p>
         </div>
         <div class="flexbox">
-            <p>This is paragraph 3.</p>
+            <p>Steroids have become very popular in the fitness and bodybuilding community, and have had a significant impact on the younger audience that watch fitness influencers and try to imitate what they do. These influencers have caused many to believe that they need to use steroids in order to have the physique that they aspire to have. Influencers have significantly impacted the way people use steroids, making it seem like it is the only way to achieve their goals, and cause people to create unrealistic expectations. It is important to know the side effects of steroid use, and how it impacts the longevity of ones health.</p>
         </div>
     </main>
 </body>
