--- a/folder1/about.html
+++ b/folder1/about.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <div>
+            <div>
             <div class="bingus-flexbox">
                 <img src="download (2).jpg" alt="ulterior motive"> 
             </div>
@@ -39,6 +39,7 @@
         <div class="flexbox">
             <p>Steroids have become very popular in the fitness and bodybuilding community, and have had a significant impact on the younger audience that watch fitness influencers and try to imitate what they do. These influencers have caused many to believe that they need to use steroids in order to have the physique that they aspire to have. Influencers have significantly impacted the way people use steroids, making it seem like it is the only way to achieve their goals, and cause people to create unrealistic expectations. It is important to know the side effects of steroid use, and how it impacts the longevity of ones health.</p>
         </div>
-    </main>
+        </div>
+     </main>
 </body>
 </html>
