--- a/Lab13/index.html
+++ b/Lab13/index.html
@@ -20,7 +20,7 @@
 <body>
 
 
-<a href="#main-content" class="visually-hidden">Skip to main content</a>
+<a href="#main-content" class="visually-hidden">Skip to content!</a>
 
 
 <nav>
