--- a/Lab13/index.html
+++ b/Lab13/index.html
@@ -5,6 +5,7 @@
     <title>Gabriel Worley - Bio</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        .body{background-color:#efc1c1}
         
         .visually-hidden {
             position: absolute;
@@ -17,6 +18,8 @@
         .body {background-color:#efc1c1}
     </style>
 </head>
+<a href="Capture.PNG">My photo</a>
+<img src="Capture.PNG" alt="me">  
 <body>
 
 
