--- a/Lab13/contact.html
+++ b/Lab13/contact.html
@@ -7,6 +7,7 @@
       <style>
         body {background-color: aqua;}
       </style>
+      <a href="contact.html" class="Contact form">Skip to content</a>
   </head>
     
    
