--- a/Lab13/index.html
+++ b/Lab13/index.html
@@ -19,8 +19,8 @@
 .special {color:rgb(188, 234, 188);}
 h1{font-size: 2em;}
 h2 {font-size: 3em;}
-a {color:#a1c4f7;}
-h2 {color: hsl(0, 100%, 98%);}
+a {color:#000000;}
+h2 {color: hsl(0, 0%, 0%);}
 h2 {background-color:#cbcfed;}
 
 .second {background-color: #0a2753;
@@ -29,7 +29,7 @@ padding: 30px;}
 nav {background-color: #a1bcbd;}
 
 nav a {color: #000000;}
-nav a:hover {background-color:  #96bdf6;}
+nav a:hover {background-color:  #000000;}
 nav {background-color: #e18ec2;}
     </style>
 </head>
