--- a/Lab13/contact.html
+++ b/Lab13/contact.html
@@ -8,7 +8,8 @@
         body {background-color: aqua;}
       </style>
       <a href="contact.html" class="Contact form">Skip to content</a>
-  </head>
+      <link rel="shortcut icon" type="image/x-icon" href="favicon (1).ico">
+    </head>
     
    
  <body>  
