--- a/Lab13/contact.html
+++ b/Lab13/contact.html
@@ -7,7 +7,7 @@
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
       <style>
         body {background-color: aqua;}
-        .jersey-20-charted-regular {
+        .jersey-20-charted-regular, .h2, .h1, .body {
   font-family: "Jersey 20 Charted", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -31,7 +31,7 @@
   <p>900 Crouse Avenue</p>
   <a href="mailto:glworley@syr.edu">click here for the Gabriel Worley Email</a> 
   <h2> My LinkedIn Profile </h2>
-  <h3> external link</h3>
+  <h2> external link</h2>
   <a href="https://www.linkedin.com/" target="_blank">Click here for the linkedin link</a>
   <a href="..\images\Logo-sized.png">LinkedIn photo</a>
   <img src="..\images\Logo-sized.png" alt="my photo">
@@ -40,7 +40,7 @@
  <title>Contact form</title>
   
   
-   <h2>Contact form</h2>
+   <h3>Contact form</h3>
    
    <form>
      <label for="text_field">Text Field:</label><br>
