--- a/Lab13/contact.html
+++ b/Lab13/contact.html
@@ -7,7 +7,7 @@
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
       <style>
         body {background-color: aqua;}
-        .jersey-20-charted-regular, .h2, .h1, .body {
+        .jersey-20-charted-regular, h2, h1, body {
   font-family: "Jersey 20 Charted", sans-serif;
   font-weight: 400;
   font-style: normal;
