--- a/folder1/sloppysteaks.html
+++ b/folder1/sloppysteaks.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3rd Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <style>
+      body {background-color: aqua;}
+        .jersey-20-charted-regular, h2, h1, body {
+  font-family: "Jersey 20 Charted", sans-serif;
+  font-weight: 400;
+  font-style: normal;}
+
     ul {
     list-style-type:lower-roman; 
     padding: 10px;
@@ -23,6 +30,9 @@
     right: 650px;
     }
 </style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jersey+20+Charted&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
