what am i doing

--- a/folder1/about.html
+++ b/folder1/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3rd Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <style>
     .bingus-flexbox{ box-sizing:content-box;
     position: absolute; 
@@ -12,23 +13,30 @@
     right: 650px;
     }
 </style>
+<script>
+    window.onload = function() {
+    document.body.style.opacity = "1"; 
+}
+</script>
 </head>
-<body>
+<body style="opacity:0;">
+    
     <header>
         <h1>About Page</h1>
         <nav>
             <ul>
-                <li><a href="index.html">1st Page</a></li>
-                <li><a href="about.html">2nd Page</a></li>
-                <li><a href="sloppysteaks.html">3rd Page</a></li>
+                <li><a href="index.html">Index Page</a></li>
+                <li><a href="about.html">About Page</a></li>
+                <li><a href="sloppysteaks.html">Main Page</a></li>
             </ul>
         </nav>
     </header>
-
+    <main id="mainContent">
     <main>
+        
             <div>
             <div class="bingus-flexbox">
-                <img src="download (2).jpg" alt="ulterior motive"> 
+                <img src="unconventional.jpg" alt="ulterior motive"> 
             </div>
         <div class="flexbox">
             <p>Contact: Gabriel Worley-(716)266-9386. 900 Crouse Dr. Syracuse, New York</p>
