--- a/folder1/index.html
+++ b/folder1/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd Page</title>
+    <title>Index Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <script>
+        window.onload = function() {
+        document.body.style.opacity = "1"; 
+    }
+    </script>
 <style>
     ul {
     list-style-type:lower-roman; 
@@ -55,14 +61,14 @@ top:200px;
     }
 </style>
 </head>
-<body>
+<body style="opacity:0;">
     <header>
         <h1>Sarms</h1>
         <nav>
             <ul>
-                <li><a href="index.html">1st Page</a></li>
-                <li><a href="about.html">2nd Page</a></li>
-                <li><a href="sloppysteaks.html">3rd Page</a></li>
+                <li><a href="index.html">Index Page</a></li>
+                <li><a href="about.html">About Page</a></li>
+                <li><a href="sloppysteaks.html">Main Page</a></li>
             </ul>
         </nav>
     </header>
@@ -70,13 +76,13 @@ top:200px;
     <main>
         <div>
             <div class="bingus-flexbox">
-                <img src="hhhh.jpg" alt="false prophet"> 
+                <img src="hhhh.jpg" alt="I am actually on steroids"> 
             </div>
     
            </div> 
        <div>
         <div class="image-flexbox">
-            <img src="download (1).jpg" alt="image lol"> 
+            <img src="end.jpg" alt="image lol"> 
         </div>
 
        </div>
@@ -89,7 +95,7 @@ top:200px;
         </div>
         <div class="flexbox-new">
 <p>SARMs, as opposed to conventional steroid drugs, have shown the possibility in fostering bone health, muscular growth, and fat reduction without having a noticeable impact on the body and its ability to naturally produce hormones, such as acne or loss of hair. SARMs are also popular because of their ease of oral administration and prospective therapeutic uses in the treatment of age-related illnesses and muscle wasting disorders, which was what they were originally intended to be used for </p>
-            <img src="download (3).jpg" alt="Machievellian">
+            <img src="famous.jpg" alt="Machievellian">
         </div>
         
             <div class="flexbox-new">
