--- a/folder1/sloppysteaks.html
+++ b/folder1/sloppysteaks.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd Page</title>
+    <title>Main Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <style>
-      body {background-color: aqua;}
+      body {background-color: rgb(202, 237, 237);}
         .jersey-20-charted-regular, h2, h1, body {
   font-family: "Jersey 20 Charted", sans-serif;
   font-weight: 400;
@@ -30,18 +30,23 @@
     right: 650px;
     }
 </style>
+<script>
+    window.onload = function() {
+    document.body.style.opacity = "1"; 
+}
+</script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+20+Charted&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="opacity:0;">
     <header>
-        <h1>Project Part 5</h1>
+        <h1>Main Page</h1>
         <nav>
             <ul>
-                <li><a href="index.html">1st Page</a></li>
-                <li><a href="about.html">2nd Page</a></li>
-                <li><a href="sloppysteaks.html">3rd Page</a></li>
+                <li><a href="index.html">Index Page</a></li>
+                <li><a href="about.html">About Page</a></li>
+                <li><a href="sloppysteaks.html">Main Page</a></li>
             </ul>
         </nav>
     </header>
