--- a/folder1/sloppysteaks.html
+++ b/folder1/sloppysteaks.html
@@ -32,15 +32,15 @@
         }
         .skip-to-content {
             position: fixed;
-            top: 10px;
-            left: 10px;
-            background-color: #000;
-            color: #fff;
-            padding: 10px;
-            border: none;
+            top: 8px;
+            left: 9px;
+            background-color: #a91515;
+            color: #998080;
+            padding: 5px;
             border-radius: 5px;
             cursor: pointer;
             z-index: 9999;
+            border: none;
         }
     </style>
     <script>
